# revenue-ai-copilot

./: .gitignore  01-rag-mvp.ipynb  02-load-pdfs.ipynb  03-rag-working.ipynb  04-semantic-search.ipynb  LICENSE  README.md  pyproject.toml
app/: ingest.py
